objects/GEMS_Request_Resource__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Team_Role__c</fullName>
        <label>Case Team Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>GEMS Request Resource</label>
    <pluralLabel>GEMS Request ResourceS</pluralLabel>
</CustomObject>